--- a/package.json
+++ b/package.json
@@ -4,12 +4,19 @@
   "private": true,
   "homepage": "https://nickatodo.github.io/goit-project-react/",
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@mui/material": "^5.16.0",
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "i18next": "^23.11.5",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-i18next": "^14.1.2",
+    "react-redux": "^9.1.2",
     "react-scripts": "5.0.1",
+    "styled-components": "^6.1.11",
     "web-vitals": "^2.1.3"
   },
   "scripts": {
