--- a/package.json
+++ b/package.json
@@ -7,17 +7,25 @@
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@mui/material": "^5.16.0",
+    "@reduxjs/toolkit": "^2.2.6",
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.7.2",
+    "date-fns": "^3.6.0",
     "i18next": "^23.11.5",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-i18next": "^14.1.2",
+    "react-icons": "^5.2.1",
     "react-redux": "^9.1.2",
     "react-scripts": "5.0.1",
+    "react-toastify": "^10.0.5",
+    "redux-persist": "^6.0.0",
     "styled-components": "^6.1.11",
-    "web-vitals": "^2.1.3"
+    "web-vitals": "^2.1.3",
+    "@react-spring/web": "^9.7.3",
+    "framer-motion": "^11.2.13"
   },
   "scripts": {
     "start": "react-scripts start",
